force-app/main/default/objects/Instance__c/fields/Licenses__c.field-meta.xml
<CustomField>
    <fullName>Licenses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Licenses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>