force-app/main/default/objects/Instance__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&apos;Trial Instance&apos;</defaultValue>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial Instance</fullName>
            </value>
            <value>
                <fullName>Standard Instance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>