force-app/main/default/objects/Instance__c/validationRules/Positive_Amount_Of_Licenses.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Amount_Of_Licenses</fullName>
    <active>true</active>
    <errorConditionFormula>Licenses__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Licenses__c</errorDisplayField>
    <errorMessage>Licenses number must be more than 0</errorMessage>
</ValidationRule>