force-app/main/default/objects/Instance__c/validationRules/Standard_Instance_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Standard_Instance_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type__c , &quot;Standard Instance&quot;),ISBLANK(Account__c))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Standard instance must have owner</errorMessage>
</ValidationRule>